--- a/gcal/googlecalendar/templates/open.html
+++ b/gcal/googlecalendar/templates/open.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <a href="/rest/vi/calender/init/">Sign up with google</a>
+  <a href="/rest/v1/calender/init">Sign up with google</a>
 </head>
 <body>
 
